

                 SCons - a software construction tool

                            Change Log

NOTE: The 4.0.0 Release of SCons will drop Python 2.7 Support

RELEASE  VERSION/DATE TO BE FILLED IN LATER


  From William Deegan:
    - Fix broken clang + MSVC 2019 combination by using MSVC configuration logic to 
      propagate'VCINSTALLDIR' and 'VCToolsInstallDir' which clang tools use to locate
      header files and libraries from MSVC install. (Fixes GH Issue #3480)
    - Added C:\msys64\mingw64\bin to default mingw and clang windows PATH's.  This 
      is a reasonable default and also aligns with changes in Appveyor's VS2019 image.
    - Drop support for Python 2.7. SCons will be Python 3.5+ going forward.


  From Adam Gross:
    - Added new module SCons.Scanner.Python to allow scanning .py files.

  From Mathew Robinson:
    - Improve performance of Subst by preventing unnecessary frame
      allocations by no longer defining the *Subber classes inside of their
      respective function calls.
    - Improve performance of Subst in some cases by preventing
      unnecessary calls to eval when a token is surrounded in braces
      but is not a function call.
    - Improve performance of subst by removing unnecessary recursion.

  From Mats Wichmann:
    - Remove deprecated SourceCode
    - str.format syntax errors fixed
    - a bunch of linter/checker syntax fixups
    - Convert remaining uses of insecure/deprecated mktemp method.
    - Clean up some duplications in manpage.  Clarify portion of manpage on Dir and File nodes.


RELEASE 3.1.2 - Mon, 17 Dec 2019 02:06:27 +0000

  From Edoardo Bezzeccheri
    - Added debug option "action_timestamps" which outputs to stdout the absolute start and end time for each target.

  From Rob Boehne
    - Fix suncxx tool (Oracle Studio compiler) when using Python 3.  Previously would throw an exception.
      Resolved by properly handling tool version string output as unicode.

  From Tim Gates